--- a/index.html
+++ b/index.html
@@ -4,9 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Deprem İzleyici ve Acil Yardım</title>
-  <!-- Chart.js -->
-  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-  <!-- Firebase SDK -->
+  <!-- 1) Firebase SDK'yı dahil et -->
   <script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-database.js"></script>
   <style>
@@ -15,10 +13,11 @@
     nav { display: flex; justify-content: center; gap: 1rem; background-color: #00509e; padding: 0.5rem; }
     nav a { color: white; text-decoration: none; font-weight: bold; }
     section { padding: 1rem; margin: 1rem auto; background: white; border-radius: 10px; max-width: 900px; box-shadow: 0 2px 10px rgba(0,0,0,0.1); }
+    iframe.full { width: 100%; height: 500px; border: none; }
     #settings-toggle { position: fixed; top: 1rem; right: 1rem; background: #00509e; color: white; border: none; padding: 0.5rem; border-radius: 5px; cursor: pointer; z-index: 1000; }
-    #settings-panel { display: none; position: fixed; top:0; right:0; width:300px; height:100%; background:white; box-shadow:-2px 0 10px rgba(0,0,0,0.2); padding:1rem; z-index:999; }
+    #settings-panel { display: none; position: fixed; top:0; right:0; width:300px; height:100%; background:white; box-shadow:-2px 0 10px rgba(0,0,0,0.2); padding:1rem; z-index:999; overflow-y:auto; }
     #chat-messages { height: 200px; overflow-y: auto; border: 1px solid #ccc; padding: 0.5rem; margin-bottom: 0.5rem; }
-    #game-canvas { border:1px solid #333; display:block; margin:0 auto; }
+    canvas { background: #ffffff; display: block; margin: 0 auto; border: 1px solid #ccc; }
   </style>
 </head>
 <body>
@@ -26,10 +25,10 @@
   <button id="settings-toggle">Ayarlar</button>
   <div id="settings-panel">
     <h3>Ayarlar</h3>
-    <label for="thresholdRange">Alarm Eşiği: <span id="thresholdValue">15</span></label><br/>
-    <input type="range" id="thresholdRange" min="5" max="50" value="15" /><br/><br/>
-    <label for="soundSelect">Alarm Sesi:</label><br/>
-    <select id="soundSelect">
+    <label>Alarm Eşiği: <span id="thresholdValue">15</span></label><br/>
+    <input type="range" id="thresholdRange" min="5" max="50" value="15" style="width:100%;"/><br/><br/>
+    <label>Alarm Sesi:</label><br/>
+    <select id="soundSelect" style="width:100%;">
       <option value="beep-10.mp3">Beep</option>
       <option value="siren.mp3">Siren</option>
       <option value="alarm.mp3">Alarm</option>
@@ -37,35 +36,31 @@
     <button onclick="closeSettings()">Kapat</button>
     <button onclick="saveSettings()">Kaydet</button>
   </div>
+
   <nav>
     <a href="#sismograf">Sismograf</a>
     <a href="#depremler">Son Depremler</a>
     <a href="#konum">Konumum</a>
     <a href="#chat">Sohbet</a>
-    <a href="#game">Oyun</a>
     <a href="#acil">Acil Numaralar</a>
   </nav>
 
-  <!-- Sismograf -->
   <section id="sismograf">
     <h2>Gerçek Zamanlı Sismograf</h2>
-    <canvas id="chart" width="400" height="200"></canvas>
+    <canvas id="chart" width="600" height="200"></canvas>
     <p id="alert"></p>
   </section>
 
-  <!-- Depremler -->
   <section id="depremler">
     <h2>Son Depremler (Kandilli / AFAD)</h2>
     <iframe class="full" src="https://deprem.afad.gov.tr/last-earthquakes.html"></iframe>
   </section>
 
-  <!-- Konum -->
   <section id="konum">
     <h2>Konumum</h2>
     <div id="map"></div>
   </section>
 
-  <!-- Sohbet -->
   <section id="chat">
     <h2>Canlı Yardım &amp; Sohbet</h2>
     <div id="chat-messages"></div>
@@ -73,14 +68,6 @@
     <button id="sendButton">Gönder</button>
   </section>
 
-  <!-- Oyun -->
-  <section id="game">
-    <h2>Çocuklar İçin Mini Oyun</h2>
-    <canvas id="game-canvas" width="300" height="300"></canvas>
-    <p>Skor: <span id="score">0</span></p>
-  </section>
-
-  <!-- Acil Numaralar -->
   <section id="acil">
     <h2>Acil İletişim Numaraları</h2>
     <ul>
@@ -91,81 +78,52 @@
   </section>
 
   <script>
-    // Firebase yapılandırması
+    /**
+     * Firebase Kurulum Adımları:
+     * 1) Firebase Console'a gidin (console.firebase.google.com).
+     * 2) Yeni bir proje oluşturun.
+     * 3) "Realtime Database" sekmesinden veritabanını başlatın (test mode).
+     * 4) Project Settings > Genel > "Your apps" bölümünden Web (</>) uygulaması ekleyin.
+     * 5) Karşınıza çıkan firebaseConfig nesnesini aşağıya kopyalayın.
+     */
+    // Örnek yapılandırma (kendi değerlerinle değiştir):
     const firebaseConfig = {
-      apiKey: "YOUR_API_KEY",
-      authDomain: "YOUR_AUTH_DOMAIN",
-      databaseURL: "YOUR_DB_URL",
-      projectId: "YOUR_PROJECT_ID",
-      storageBucket: "YOUR_BUCKET",
-      messagingSenderId: "YOUR_SENDER_ID",
-      appId: "YOUR_APP_ID"
+        apiKey: "AIzaSyB4CZA28xslf90DPDaZEcd1y6fbAB5Ixiw",
+        authDomain: "sismografturkiye.firebaseapp.com",
+        databaseURL: "https://sismografturkiye-default-rtdb.europe-west1.firebasedatabase.app",
+        projectId: "sismografturkiye",
+        storageBucket: "sismografturkiye.firebasestorage.app",
+        messagingSenderId: "734521588170",
+        appId: "1:734521588170:web:733fa98f137ef43eef7733",
+        measurementId: "G-1Q9QRFWZBD"
     };
+    // Firebase başlat
     firebase.initializeApp(firebaseConfig);
-    const db = firebase.database().ref('chat');
+    const db = firebase.database().ref('chat'); // 'chat' düğümünü kullan
 
-    // Service Worker kaydı ve Periodic Sync
-    if ('serviceWorker' in navigator) {
-      navigator.serviceWorker.register('sw.js').then(reg => {
-        if ('periodicSync' in reg) {
-          reg.periodicSync.register('fetch-earthquakes', { minInterval: 60 * 1000 });
-        }
-      });
-    }
-
-    // Wake Lock
-    if ('wakeLock' in navigator) {
-      navigator.wakeLock.request('screen');
-    }
-
-    // Sismograf grafik
+    // Ayarlar paneli
     let threshold = 15;
     let alertSound = new Audio('beep-10.mp3');
-    const data = [], labels = [];
-    let chart;
-    function setupChart() {
-      const ctx = document.getElementById('chart').getContext('2d');
-      chart = new Chart(ctx, { type:'line', data:{labels, datasets:[{label:'Titreşim', data, fill:false, borderColor:'red'}]}, options:{responsive:true, scales:{y:{beginAtZero:true}}} });
-    }
-    function updateChart(val) {
-      const now = new Date().toLocaleTimeString();
-      if (labels.length>30) { labels.shift(); data.shift(); }
-      labels.push(now); data.push(val); chart.update();
-    }
-    window.addEventListener('devicemotion', e => {
-      const acc = e.accelerationIncludingGravity || {x:0,y:0,z:0};
-      const total = Math.sqrt(acc.x**2+acc.y**2+acc.z**2);
-      if (total>0.5) updateChart(total);
-      if (total>threshold) {
-        document.getElementById('alert').innerText='⚠️ Sarsıntı!';
-        alertSound.play();
-        if (Notification.permission==='granted') new Notification('⚠ Deprem Uyarısı',{body:'Yüksek sarsıntı tespit edildi.'});
-      }
-    });
-
-    // Ayarlar
-    function closeSettings(){document.getElementById('settings-panel').style.display='none'}
+    function closeSettings(){ document.getElementById('settings-panel').style.display='none'; }
     function saveSettings(){
       threshold = +document.getElementById('thresholdRange').value;
-      document.getElementById('thresholdValue').innerText=threshold;
-      const snd = document.getElementById('soundSelect').value;
-      alertSound.src = snd;
+      document.getElementById('thresholdValue').innerText = threshold;
+      alertSound.src = document.getElementById('soundSelect').value;
       closeSettings();
     }
-    document.getElementById('settings-toggle').onclick=()=>{
-      const p = document.getElementById('settings-panel');
-      p.style.display = p.style.display==='block' ? 'none' : 'block';
+    document.getElementById('settings-toggle').onclick = () => {
+      const panel = document.getElementById('settings-panel');
+      panel.style.display = panel.style.display==='block' ? 'none' : 'block';
     };
-    document.getElementById('thresholdRange').oninput = e => {
-      document.getElementById('thresholdValue').innerText = e.target.value;
-    };
+    document.getElementById('thresholdRange').oninput = e => document.getElementById('thresholdValue').innerText = e.target.value;
 
-    // Harita
-    function initMap() {
+    // Konum
+    function initMap(){
       if (navigator.geolocation) navigator.geolocation.getCurrentPosition(p => {
-        const f = `<iframe src="https://maps.google.com/maps?q=${p.coords.latitude},${p.coords.longitude}&z=15&output=embed"></iframe>`;
-        document.getElementById('map').innerHTML = f;
-      }); else document.getElementById('map').innerText='Konum alınamadı.';
+        document.getElementById('map').innerHTML =
+          `<iframe src="https://maps.google.com/maps?q=${p.coords.latitude},${p.coords.longitude}&z=15&output=embed" class="full"></iframe>`;
+      });
+      else document.getElementById('map').innerText = 'Konum alınamadı.';
     }
 
     // Sohbet
@@ -177,42 +135,38 @@
       messagesEl.append(div);
     });
     document.getElementById('sendButton').onclick = () => {
-      const text = document.getElementById('messageInput').value;
+      const text = document.getElementById('messageInput').value.trim();
       if (!text) return;
       db.push({ user: 'Kullanıcı', text });
       document.getElementById('messageInput').value = '';
     };
 
-    // Mini oyun
-    const canvas = document.getElementById('game-canvas');
-    const ctx2 = canvas.getContext('2d');
-    let score = 0, x = 150, y = 150, r = 20;
-    function drawBall() {
-      ctx2.clearRect(0,0,300,300);
-      ctx2.beginPath();
-      ctx2.arc(x,y,r,0,2*Math.PI);
-      ctx2.fillStyle = 'blue';
-      ctx2.fill();
-    }
-    canvas.onclick = e => {
-      const rect = canvas.getBoundingClientRect();
-      const mx = e.clientX - rect.left, my = e.clientY - rect.top;
-      if ((mx-x)**2 + (my-y)**2 < r*r) {
-        score++;
-        document.getElementById('score').innerText = score;
-        x = Math.random()*280 + 10;
-        y = Math.random()*280 + 10;
-        drawBall();
+    // Wake Lock & Bildirim
+    if ('wakeLock' in navigator) navigator.wakeLock.request('screen');
+    if ('Notification' in window && Notification.permission!=='granted') Notification.requestPermission();
+
+    // Custom Canvas Grafiği
+    const canvas = document.getElementById('chart');
+    const ctx = canvas.getContext('2d');
+    const W = canvas.width, H = canvas.height;
+    const maxRange = 30;
+    ctx.fillStyle = '#fff'; ctx.fillRect(0,0,W,H);
+    window.addEventListener('devicemotion', e => {
+      const acc = e.accelerationIncludingGravity || {x:0,y:0,z:0};
+      const total = Math.sqrt(acc.x**2 + acc.y**2 + acc.z**2);
+      const img = ctx.getImageData(1,0,W-1,H);
+      ctx.putImageData(img,0,0);
+      const y = H - Math.min(total, maxRange)/maxRange * H;
+      ctx.fillStyle = 'red'; ctx.fillRect(W-1,y,1,2);
+      if (total > threshold) {
+        document.getElementById('alert').innerText = '⚠️ Sarsıntı tespit edildi!';
+        alertSound.play();
+        if (Notification.permission==='granted') new Notification('⚠️ Deprem Uyarısı',{body:'Yüksek sarsıntı tespit edildi.'});
       }
-    };
+    });
 
     // Başlangıç
-    window.onload = () => {
-      initMap();
-      setupChart();
-      if (Notification.permission !== 'granted') Notification.requestPermission();
-      drawBall();
-    };
+    window.onload = () => { initMap(); };
   </script>
 </body>
 </html>
