--- a/index.html
+++ b/index.html
@@ -62,6 +62,90 @@
       color: white;
       border: none;
       border-radius: 5px;
+      body {
+      font-family: 'Segoe UI', sans-serif;
+      background-color: #f0f0f0;
+      color: #333;
+      text-align: center;
+      margin: 0;
+      padding: 0;
+      transition: background 0.3s, color 0.3s;
+    }
+
+    header {
+      background-color: #007acc;
+      color: white;
+      padding: 1rem;
+    }
+
+    .panel, #radyo {
+      background-color: white;
+      border-radius: 10px;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+      margin: 2rem auto;
+      padding: 2rem;
+      max-width: 700px;
+    }
+
+    .theme-toggle, .radio-toggle {
+      margin-top: 1rem;
+    }
+
+    button {
+      padding: 10px 20px;
+      background-color: #007acc;
+      border: none;
+      border-radius: 6px;
+      color: white;
+      font-weight: bold;
+      cursor: pointer;
+      transition: background 0.2s;
+      margin: 5px;
+    }
+
+    button:hover {
+      background-color: #005fa3;
+    }
+
+    .dark {
+      background-color: #111;
+      color: white;
+    }
+
+    .dark .panel, .dark #radyo {
+      background-color: #222;
+      color: white;
+    }
+
+    #alert {
+      font-size: 1.2rem;
+      font-weight: bold;
+      margin-top: 1rem;
+      color: #e91e63;
+    }
+
+    audio {
+      width: 100%;
+      margin-top: 10px;
+    }
+
+    #timer {
+      font-weight: bold;
+      font-size: 1rem;
+      margin-top: 10px;
+    }
+
+    .shake {
+      animation: shake 0.5s infinite;
+    }
+
+    @keyframes shake {
+      0% { transform: translate(0px, 0px); }
+      25% { transform: translate(3px, -3px); }
+      50% { transform: translate(-3px, 3px); }
+      75% { transform: translate(3px, 3px); }
+      100% { transform: translate(-3px, -3px); }
+    }
     }
   </style>
 </head>
@@ -240,5 +324,21 @@
       setupChart();
     }
   </script>
+
+  <!-- Yeni Radyo Bölümü -->
+<section id="radyo">
+    <h2>Canlı Radyo</h2>
+    <p>Stresi azaltmak için bir şeyler dinlemek isterseniz:</p>
+    <audio id="radioPlayer" controls>
+      <source src="https://radyo.oggstreaming.com:8000/radyotest" type="audio/mpeg">
+      Tarayıcınız audio öğesini desteklemiyor.
+    </audio>
+    <div class="theme-toggle">
+      <button onclick="toggleRadio()">Oynat / Durdur</button>
+    </div>
+  </section>
+
+
+  
 </body>
 </html>
